[package]
name = "oid"
version = "0.2.1"

authors = ["Sean Bruton <sean@unnecessary.engineering>"]
categories = ["api-bindings", "cryptography", "data-structures", "embedded", "no-std"]
description = "Rust-native library for building, parsing, and formating Object Identifiers (OIDs)"
edition = "2018"
homepage = "https://labs.unnecessary.engineering/oid"
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
keywords = ["oid", "asn1", "x500"]
license = "MIT OR Apache-2.0"
publish = ["crates-io"]
readme = "README.md"
repository = "https://github.com/UnnecessaryEngineering/oid"

[badges]
codecov = {repository = "UnnecessaryEngineering/oid", branch = "master", service = "github"}
is-it-maintained-issue-resolution = {repository = "UnnecessaryEngineering/oid"}
is-it-maintained-open-issues = {repository = "UnnecessaryEngineering/oid"}
maintenance = {status = "actively-developed"}
travis-ci = {repository = "UnnecessaryEngineering/oid", branch = "master", service = "github"}

[dependencies]
serde = {version = "1.0.116", default-features = false, optional = true}

[dev-dependencies]
bincode = "1.3.1"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.116"

[features]
default = ["std"]
serde_support = ["serde"]
std = []
u32 = []
